# Youtube-Tracker

./: .gitignore  README.md  diseno_tecnico_verificador_youtube.md  schema.sql
.claude/: settings.json
.claude/hooks/: session-start
.claude/skills/: README.md  (+1 more)
backend/: .env.example  pyproject.toml  requirements-lock.txt
backend/briefs/: ejemplo-completo.json  ejemplo-solo-determinista.json
backend/golden/: README.md  example.json
backend/tests/: test_association.py  test_channel_status.py  test_channels_edge_cases.py  test_channels_refs.py  test_channels_resolve.py  test_decision.py  test_deterministic.py  test_edge_cases.py  test_eval.py  test_eval_cli.py  test_jobs_backoff.py  test_jobs_deadlines.py  test_jobs_leases.py  test_jobs_tick.py  test_llm.py  test_metadata.py  test_models.py  test_repository.py  test_transcript.py  test_verify.py  test_verify_multi.py  test_websub_app.py  test_websub_callback.py  test_websub_feed.py  test_websub_signature.py  test_websub_subscribe.py
backend/verifier/: association.py  channel_status.py  cli.py  decision.py  eval.py  eval_cli.py  metadata.py  models.py  repository.py  transcript.py  verify.py  verify_multi.py
backend/verifier/channels/: refs.py  resolve.py
backend/verifier/checks/: deterministic.py  llm.py
backend/verifier/jobs/: backoff.py  deadlines.py  leases.py  tick.py
backend/verifier/websub/: app.py  callback.py  feed.py  signature.py  subscribe.py
docs/: guia-fase-1-testeo.md  requisitos-despliegue.md  requisitos-externos.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
(+53 files in other folders)
