[project]
name = "verifier"
version = "0.1.0"
description = "Núcleo de verificación de publicidad en YouTube (Fase 1)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "requests>=2.32",
    "youtube-transcript-api>=0.6.2",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-mock>=3.14", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["verifier*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
